# tauri-plugin-theme

./: Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
examples/app/: package.json
examples/app/src/: main.ts
examples/app/src-tauri/: Cargo.toml  tauri.conf.json
examples/app/src-tauri/capabilities/: appearance.json  dialog.json  os.json  theme.json  window.json
examples/app/src-tauri/src/: main.rs
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: cmd_get_theme.toml  cmd_set_theme.toml
permissions/schemas/: schema.json
src/: lib.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
webview-src/: index.ts
