[package]
name = "tauri-plugin-theme"
version = "0.4.0"
authors = ["wyhaya", "kuyoonjo"]
edition = "2021"
license = "MIT"
repository = "https://github.com/kuyoonjo/tauri-plugin-theme"
description = "Dynamically change Tauri App theme"
keywords = ["tauri", "plugin", "theme"]
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]
readme = "README.md"
links = "tauri-plugin-theme"

[build-dependencies]
tauri-plugin = { version = "2.0.0-beta.16", features = ["build"] }

[dependencies]
tauri = { version = "2.0.0-beta.20" }
serde = { version = "1", features = ["derive"] }

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.25"

[target."cfg(target_os = \"linux\")".dependencies]
gtk = "0.18"
tintanum = "0.1"
futures-lite = "2.0"
tokio = { version = "1", features = ["macros"] }
once_cell = "1.18"

[target."cfg(target_os = \"windows\")".dependencies]
windows-sys = { version = "0.52.0", features = ["Win32_Foundation", "Win32_Graphics", "Win32_Graphics_Dwm"] }
