[package]
name = "example"
version = "0.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tauri = { version = "2.0.4", features = [] }
tauri-plugin-os = "2.0.1"
tauri-plugin-dialog = "2.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-appearance = { path = "../../../" }

[features]
custom-protocol = ["tauri/custom-protocol"]
